@@ -1,6 +1,7 @@
 package practice;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -8,6 +9,7 @@ import java.util.Optional;
 import java.util.OptionalDouble;
 import java.util.stream.Collectors;
 import model.Candidate;
+import model.Cat;
 import model.Person;
 
 public class StreamPractice {
@@ -65,7 +67,7 @@ public class StreamPractice {
                 .filter(p -> p.getSex() == Person.Sex.MAN)
                 .filter(p -> p.getAge() >= fromAge)
                 .filter(p -> p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -90,7 +92,7 @@ public class StreamPractice {
                     }
 
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -100,11 +102,11 @@ public class StreamPractice {
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
         return peopleList.stream()
-                .filter(p -> p.getSex() == Person.Sex.WOMAN)
-                .filter(p -> p.getAge() >= femaleAge)
-                .map(p -> p.getCats())
-                .flatMap(List::stream)
-                .map(c -> c.getName())
+                .filter(person -> person.getSex().equals(Person.Sex.WOMAN)
+                        && person.getAge() >= femaleAge)
+                .map(Person::getCats)
+                .flatMap(Collection::stream)
+                .map(Cat::getName)
                 .collect(Collectors.toList());
     }
 
@@ -126,7 +128,7 @@ public class StreamPractice {
                 .filter(c -> candidateValidator.test(c))
                 .map(c -> c.getName())
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
     }
 }
